--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,30 @@
+[build-system]
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "mini-chat"
+version = "0.1.0"
+description = "Terminal-based chatbot using Rich for UI and direct HTTP requests"
+readme = "README.md"
+requires-python = ">=3.10"
+license = {text = "MIT"}
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+dependencies = [
+    "rich~=13.7.0",
+    "requests~=2.31.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "ruff~=0.3.0",
+]
+
+[project.scripts]
+mini-chat = "mini_chat.__main__:main"
+
 [tool.ruff]
 target-version = "py310"
 line-length = 100
@@ -19,7 +46,7 @@ select = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["models", "ui", "api", "config"]
+known-first-party = ["mini_chat"]
 
 [tool.ruff.format]
 quote-style = "double"
