--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "ruff~=0.3.0",
+    "pre-commit~=3.5.0",
 ]
 
 [project.scripts]
@@ -55,4 +56,4 @@ line-ending = "auto"
 skip-magic-trailing-comma = false
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"] # Unused imports 
+"__init__.py" = ["F401"] # Unused imports
