--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-rich==13.7.0
-requests==2.31.0
-ruff==0.3.0
-pytest==7.4.0
-pytest-cov==4.1.0
-pyyaml==6.0.1
+rich>=13.0.0
+requests>=2.25.0
+ruff>=0.0.0
+pytest>=7.0.0
+pytest-cov>=4.0.0
+pyyaml>=6.0.0
